--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <div id="loadOverlay" style="background-color:rgb(0, 0, 0); position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
