--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: black;">
   <head>
     
     <meta charset="utf-8" />
@@ -27,7 +27,7 @@
     -->
     <title>jxshooter</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
