--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       name="description"
       content="jxshooter photography. Contact to collaborate"
     />
-    <meta property="og:image" content="https:www.jxshooter.com/display.png">
-    <meta property="og:image:secure_url" content="https:www.jxshooter.com/display.png">
+    <meta property="og:image" content="https://www.jxshooter.com/display.png">
+    <meta property="og:image:secure_url" content="https://www.jxshooter.com/display.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
