--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="jxshooter photography. Contact to collaborate"
+      content="Joshua Wilkinson photography. Contact to collaborate"
     />
     <meta property="og:image" content="https://www.jxshooter.com/display.png">
     <meta property="og:image:secure_url" content="https://www.jxshooter.com/display.png">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>jxshooter</title>
+    <title>Joshua Wilkinson</title>
   </head>
   <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
