--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: black;">
+<html lang="en" style="background-color: rgb(21, 21, 21);">
   <head>
     
     <meta charset="utf-8" />
@@ -29,7 +29,7 @@
     -->
     <title>Joshua Wilkinson</title>
   </head>
-  <body style="background-color: black;">
+  <body style="background-color: rgb(21, 21, 21);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
